clap_derive/tests/ui/skip_flatten.stderr
error: subcommand, flatten and skip cannot be used together
  --> $DIR/skip_flatten.rs:17:18
   |
17 |     #[clap(skip, flatten)]
   |                  ^^^^^^^
